# pyvelope

./: .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
examples/aws_lambda_entrypoint/: README.md  consumers.py  di.py  main.py  utils.py
examples/aws_send_and_publish/: README.md  main.py
src/pyvelope/: __init__.py  aws.py  envelope.py  simple.py
src/pyvelope/_pyvelope/: exceptions.py
src/pyvelope/_pyvelope/abstractions/: json.py  message_bus.py  messages.py  transport.py
src/pyvelope/_pyvelope/implementations/: message_bus.py
src/pyvelope/_pyvelope/implementations/eventbridge/: transport.py
src/pyvelope/_pyvelope/implementations/sqs/: transport.py
src/pyvelope/abstractions/: message_bus.py  message_relay.py
src/pyvelope/primitives/: messages.py
src/pyvelope/transports/: __init__.py
