[project]
name = "pyvelope"
version = "0.1.0"
description = "Outbox / Inbox for your event driven applications"
authors = [
    { name = "wasinski", email = "4nt45h@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.9"

[project.scripts]
hello = "pyvelope:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pyvelope"]
