[project]
name = "pyvelope"
version = "0.1.0"
description = "Outbox / Inbox for your event driven applications"
authors = [
    { name = "wasinski", email = "4nt45h@gmail.com" }
]
dependencies = [
    "attrs>=23.2.0",
]
readme = "README.md"
requires-python = ">=3.11,<3.12"

[project.scripts]
hello = "pyvelope:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.8.0",
    "ruff>=0.3.0",
    "pytest>=8.1.0",
    "dependency-injector>=4.41.0",
    "pdbpp>=0.10.3",
    "ipython>=8.22.2",
    "pytest-randomly>=3.15.0",
    "pytest-mock>=3.14.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pyvelope"]
